traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:15: error: value += is not a member of Int
      diag += 1
           ^TraversalDiagonal:17: error: value += is not a member of Int
      diag += 1
           ^TraversalDiagonal:24: error: value += is not a member of Int
      diag += 1
           ^